--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #1a455f;
+  background-color: rgba(255, 255, 255, 0.87);
 }
 
 a {
