--- a/admin/src/pages/displayUsers/index.css
+++ b/admin/src/pages/displayUsers/index.css
@@ -1,23 +1,30 @@
-/* Add this CSS to your stylesheet or style block */
-
 .user-table {
   width: 100%;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
   margin-bottom: 20px;
-  margin-top: 100px;
+  margin-top: 120px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+button {
+  background-color: #f55916;
+  border: none;
 }
 
 .user-table th,
 .user-table td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  border: 0.5px solid #ddd;
+  padding-inline: 10px;
+  padding-block: 7px;
   text-align: left;
   background-color: #3b7e81;
 }
 
 .user-table th {
   background-color: #0f2837;
-  color: white; /* Add text color for better visibility */
+  color: white;
 }
 
 .user-table tr:hover {
@@ -42,7 +49,7 @@
   background-color: #f55916;
   color: white;
   border: none;
-  border-radius: 4px; /* Add border-radius to the buttons */
+  border-radius: 4px;
 }
 
 .pagination button:hover {
